[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.137.1",
    "groq>=0.37.1",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
